--- a/fobi/index.html
+++ b/fobi/index.html
@@ -11,6 +11,7 @@
 		<link rel="stylesheet" href="./src/css/style.css">
 
 		<script defer src="./src/libs/p5.js"></script>
+		<script defer src="./src/libs/p5.sound.js"></script>
 		<script defer src="./src/js/main.js"></script>
 	</head>
 
