added working camera scroll and fullscreen

--- a/fobi/index.html
+++ b/fobi/index.html
@@ -12,6 +12,7 @@
 
 		<script defer src="./src/libs/p5.js"></script>
 		<script defer src="./src/libs/p5.sound.js"></script>
+		<script defer src="./src/libs/p5.play.js"></script>
 		<script defer src="./src/js/main.js"></script>
 	</head>
 
