voiceover works now

--- a/fobi/index.html
+++ b/fobi/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-		<title>FOBI</title>
+		<title>PHOBOPHOBIA</title>
 
 		<link rel="stylesheet" href="./src/css/style.css">
 
